Pagina de reservas

--- a/views/home/movie.html
+++ b/views/home/movie.html
@@ -37,18 +37,7 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-          <a class="nav-link" id="v-pills-movie-tab" data-toggle="pill" href="#v-pills-movie" role="tab" aria-controls="v-pills-movie"
-            aria-selected="true">Película</a>
-          <a class="nav-link scenes" id="v-pills-scenes-tab" data-toggle="pill" data-code="28" href="#v-pills-scenes" role="tab" aria-controls="v-pills-scenes"
-            aria-selected="false">Entre vestidores</a>
-          <a class="nav-link cast" id="v-pills-cast-tab" data-toggle="pill" data-code="12" href="#v-pills-cast" role="tab" aria-controls="v-pills-cast"
-            aria-selected="false">Todo el elenco</a>
-          <a class="nav-link reviews" id="v-pills-reviews-tab" data-toggle="pill" data-code="16" href="#v-pills-reviews" role="tab"
-            aria-controls="v-pills-reviews" aria-selected="false">Comentarios</a>
-          <a class="nav-link" id="logIn" role="button" data-toggle="modal" data-target="#logInModal" aria-controls="v-pills-login" 
-            aria-selected="false">Funciones</a>
-          <a class="nav-link recommendations" id="v-pills-recommendations-tab" data-toggle="pill" data-code="16" href="#v-pills-recommendations"
-            role="tab" aria-controls="v-pills-recommendations" aria-selected="false">Obtén recomendaciones</a>
+          <a class="nav-link recommendations" id="v-pills-recommendations-tab" href="reserva.html">Reservar silla</a>
         </div>
       </ul>
     </div>
